// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exception screen component Renders correctly when error object is provided 1`] = `
<Container>
  <Header
    title="CATASTROPHIC FAILURE"
  />
  <Block
    flex={0.2}
  >
    <CenteredText
      msg="MOCK BAD ERROR..."
    />
  </Block>
  <Block
    flex={0.4}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "black",
          "fontFamily": "TTCommons",
          "fontSize": 10,
        }
      }
    >
      MOCK STACK TRACE...
    </Text>
  </Block>
  <Block
    flex={0.2}
  >
    <CenteredText
      msg="Please try to restart the application!"
    />
  </Block>
</Container>
`;

exports[`Exception screen component Renders correctly when no error object is provided 1`] = `
<Container>
  <Header
    title="CATASTROPHIC FAILURE"
  />
  <Block
    flex={0.2}
  >
    <CenteredText
      msg="No further details are available :("
    />
  </Block>
  <Block
    flex={0.4}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "black",
          "fontFamily": "TTCommons",
          "fontSize": 10,
        }
      }
    >
      No stack trace available :(
    </Text>
  </Block>
  <Block
    flex={0.2}
  >
    <CenteredText
      msg="Please try to restart the application!"
    />
  </Block>
</Container>
`;
